[package]
name = "rust_wren"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
leaks = []

[dependencies]
lazy_static = "1.4.0"
tokio = { version = "1.18.2", features = ["full"] }
wren_sys = { path = "./wren-sys" }
static_assertions = "1.1.0"
