[package]
name = "rust_wren"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
leaks = []

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
wren_sys = { path = "./wren-sys" }
wren_macros = { path = "./wren-macros" }
static_assertions = "1.1.0"
dirs = "4.0.0"
enumflags2 = "0.7.5"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
once_cell = "1.9"
termcolor = "1.0.4"
