[package]
name = "rust_wren"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]

[[bin]]
name = "rust_wren"
path = "src/main.rs"

[features]
leaks = []

[[test]]
name = "tests"
path = "tests/main.rs"

[[bench]]
name = "call_benchmarks"
harness = false

[[bench]]
name = "foreign_call_benchmarks"
harness = false

[dependencies]
tokio = { version = "1.18.2", features = ["full"] }
dirs = "4.0.0"
wren = { path = "./wren" }
wren_macros = { path = "./wren-macros" }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"
criterion = "0.3"
wren_sys = { path = "./wren-sys" }