[package]
name = "wren"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wren_sys = { path = "../wren-sys" }
wren_macros = { path = "../wren-macros" }
static_assertions = "1.1.0"
enumflags2 = "0.7.5"
num-traits = "0.2.15"
